[gd_scene load_steps=11 format=3 uid="uid://cw3u2usrdjlg1"]

[ext_resource type="Script" path="res://addons/polygon2d_editor/dock.gd" id="1_bxwah"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/move.gd" id="2_mrcu8"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/canvas.gd" id="4_2g2sv"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/brush.gd" id="4_tqva2"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/edit.gd" id="5_mo8mn"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/hold.gd" id="6_l2i38"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/hold_offset.gd" id="7_4qvdq"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/tool.gd" id="8_s2esk"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/info.gd" id="10_t8wsx"]
[ext_resource type="Script" path="res://addons/polygon2d_editor/confirm.gd" id="11_cg08a"]

[node name="Polygon2D Editor" type="TabContainer" node_paths=PackedStringArray("move", "edit")]
clip_contents = true
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false
script = ExtResource("1_bxwah")
move = NodePath("Move")
edit = NodePath("Edit")

[node name="Move" type="Panel" parent="." node_paths=PackedStringArray("presets_list")]
clip_contents = true
layout_mode = 2
mouse_filter = 1
script = ExtResource("2_mrcu8")
presets_list = NodePath("settings/presets/cont/presets_list")
type = 1

[node name="TabCanvas" type="Node2D" parent="Move"]
z_index = 1
script = ExtResource("4_2g2sv")

[node name="Container" type="Control" parent="Move"]
layout_mode = 1
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
scale = Vector2(0.3, 0.3)
mouse_filter = 2

[node name="UV" type="Sprite2D" parent="Move/Container"]
visible = false
modulate = Color(0.937255, 0.52549, 1, 1)
centered = false

[node name="Polygon2D" type="Polygon2D" parent="Move/Container"]

[node name="Canvas" type="Node2D" parent="Move/Container"]
z_index = 2
script = ExtResource("4_2g2sv")

[node name="Hold" type="Node2D" parent="Move/Container/Canvas"]
z_index = 10
script = ExtResource("6_l2i38")

[node name="Offset" type="Node2D" parent="Move/Container/Canvas/Hold"]
script = ExtResource("7_4qvdq")

[node name="Brush" type="Node2D" parent="Move/Container/Canvas"]
position = Vector2(-3.33333, -3.33333)
scale = Vector2(3.33333, 3.33333)
script = ExtResource("4_tqva2")

[node name="buttons" type="VBoxContainer" parent="Move"]
z_index = 10
layout_mode = 1
offset_right = 60.0
offset_bottom = 31.0

[node name="reset" type="Button" parent="Move/buttons"]
layout_mode = 2
mouse_filter = 1
text = "Reset
"

[node name="debug" type="Button" parent="Move/buttons"]
visible = false
layout_mode = 2
text = "Debug"

[node name="debug_label" type="Label" parent="Move/buttons"]
visible = false
layout_mode = 2

[node name="add_pivot" type="Button" parent="Move/buttons"]
visible = false
layout_mode = 2
text = "Add Pivot"

[node name="hold_pivot" type="CheckButton" parent="Move/buttons"]
layout_mode = 2
text = "Hold Pivot"

[node name="brush" type="CheckButton" parent="Move/buttons"]
visible = false
layout_mode = 2
text = "Brush"

[node name="stretch" type="CheckButton" parent="Move/buttons"]
layout_mode = 2
text = "Stretch"

[node name="stretch_size" type="HSlider" parent="Move/buttons"]
visible = false
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.2

[node name="settings" type="VBoxContainer" parent="Move"]
z_index = 10
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_bottom = 31.0
grow_horizontal = 0

[node name="presets" type="CheckButton" parent="Move/settings"]
layout_mode = 2
text = "Presets"

[node name="cont" type="VBoxContainer" parent="Move/settings/presets"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -162.0
offset_top = 35.0
offset_bottom = 70.0
grow_horizontal = 0
alignment = 2

[node name="save_preset" type="Button" parent="Move/settings/presets/cont"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Save Preset"

[node name="presets_list" type="VBoxContainer" parent="Move/settings/presets/cont"]
layout_mode = 2

[node name="Edit" type="Panel" parent="."]
visible = false
clip_contents = true
layout_mode = 2
mouse_filter = 1
script = ExtResource("5_mo8mn")

[node name="buttons" type="VBoxContainer" parent="Edit"]
layout_mode = 1
offset_right = 34.0
offset_bottom = 66.0

[node name="clear" type="Button" parent="Edit/buttons"]
layout_mode = 2
mouse_filter = 1
text = "Clear"

[node name="details" type="Button" parent="Edit/buttons"]
visible = false
layout_mode = 2
text = "details"

[node name="subdivide" type="Button" parent="Edit/buttons"]
layout_mode = 2
text = "Subdivide"

[node name="debug" type="Button" parent="Edit/buttons"]
visible = false
layout_mode = 2
text = "debug"

[node name="debug_label" type="Label" parent="Edit/buttons"]
visible = false
layout_mode = 2

[node name="save_pivot" type="CheckButton" parent="Edit/buttons"]
layout_mode = 2
text = "Hold Pivot"

[node name="stretch" type="CheckButton" parent="Edit/buttons"]
layout_mode = 2
text = "Stretch"

[node name="stretch_size" type="HSlider" parent="Edit/buttons"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.2

[node name="pos" type="Node2D" parent="Edit"]
z_index = 3

[node name="TabCanvas" type="Node2D" parent="Edit"]
z_index = 1
script = ExtResource("4_2g2sv")

[node name="Container" type="Control" parent="Edit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UV" type="Sprite2D" parent="Edit/Container"]
centered = false

[node name="Polygon2D" type="Polygon2D" parent="Edit/Container"]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-86.5669, -119.634, 686.259, -146.655, 654.644, 643.868, -69.8477, 560.273, 161.796, 100.627, 413.097, 350.952, 257.964, -50.4275, 0.119629, 197.324, 315.315, 521.299, 169.476, 337.076, 553.036, 257.616, 407.11, 104.566, 286.852, -99.5186, 120.113, -31.5791, -51.0647, 207.522, 22.4897, 53.6248, 305.814, 575.134, 434.326, 443.087, 34.4199, 358.951, 146.11, 470.206, 305.964, 400.641, 110.508, 205.945, 609.109, 242.361, 508.628, 392.373, 456.784, -69.6526, 551.248, 56.5571, 448.29, 190.416, 329.895, 264.198, 246.127, 180.756, 268.931, 50.9385, 678.578, 165.478, 719.284, 404.199, 350.831, -240.611, 593.833, -302.739, 789.94, 28.1899, 823.646, 239.617, 780.747, 564.418, 400.792, 693.112, 97.4399, 686.984, -135.436, 340.734, -169.142, 107.858)
uv = PackedVector2Array(-86.5669, -119.634, 686.259, -146.655, 654.644, 643.868, -69.8477, 560.273, 161.796, 100.627, 413.097, 350.952, 257.964, -50.4275, 0.119629, 197.324, 315.315, 521.299, 169.476, 337.076, 553.036, 257.616, 407.11, 104.566, 286.852, -99.5186, 120.113, -31.5791, -51.0647, 207.522, 22.4897, 53.6248, 305.814, 575.134, 434.326, 443.087, 34.4199, 358.951, 146.11, 470.206, 305.964, 400.641, 110.508, 205.945, 609.109, 242.361, 508.628, 392.373, 456.784, -69.6526, 551.248, 56.5571, 448.29, 190.416, 329.895, 264.198, 246.127, 180.756, 268.931, 50.9385, 678.578, 165.478, 719.284, 404.199, 350.831, -240.611, 593.833, -302.739, 789.94, 28.1899, 823.646, 239.617, 780.747, 564.418, 400.792, 693.112, 97.4399, 686.984, -135.436, 340.734, -169.142, 107.858)
polygons = [[6, 12, 13], [4, 6, 13], [0, 13, 15], [4, 13, 15], [8, 16, 17], [7, 14, 18], [9, 18, 19], [3, 18, 19], [8, 16, 19], [9, 19, 20], [8, 19, 20], [8, 17, 20], [5, 17, 20], [9, 18, 21], [7, 18, 21], [7, 15, 21], [4, 15, 21], [10, 22, 23], [2, 17, 23], [5, 10, 23], [5, 17, 23], [6, 12, 24], [1, 24, 25], [11, 24, 25], [10, 22, 25], [11, 25, 26], [10, 25, 26], [5, 10, 26], [11, 26, 27], [5, 20, 27], [5, 26, 27], [9, 20, 27], [11, 27, 28], [4, 21, 28], [9, 21, 28], [9, 27, 28], [11, 28, 29], [4, 6, 29], [4, 28, 29], [11, 24, 29], [6, 24, 29], [22, 25, 30], [22, 23, 31], [2, 23, 31], [12, 24, 32], [12, 13, 32], [0, 13, 32], [1, 24, 33], [24, 32, 33], [1, 25, 34], [25, 30, 34], [30, 34, 35], [22, 30, 35], [22, 31, 35], [2, 31, 36], [31, 35, 36], [16, 17, 37], [2, 17, 37], [16, 37, 38], [16, 19, 38], [3, 19, 38], [14, 18, 39], [3, 18, 39], [14, 39, 40], [0, 15, 40], [7, 14, 40], [7, 15, 40]]
internal_vertex_count = 37

[node name="Canvas" type="Node2D" parent="Edit/Container"]
z_index = 2
script = ExtResource("4_2g2sv")

[node name="Hold" type="Node2D" parent="Edit/Container/Canvas"]
z_index = 10
script = ExtResource("6_l2i38")

[node name="Offset" type="Node2D" parent="Edit/Container/Canvas/Hold"]
script = ExtResource("7_4qvdq")

[node name="Info" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 1
script = ExtResource("10_t8wsx")
type = 3

[node name="TabContainer" type="TabContainer" parent="Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Description" type="Panel" parent="Info/TabContainer"]
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="Info/TabContainer/Description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="descript" type="RichTextLabel" parent="Info/TabContainer/Description/scroll"]
layout_mode = 2
size_flags_horizontal = 3
text = "Polygon2D Editor. Version 1.0.
Plugin to work with Polygon2D node. Mesh creation, editing and animation.

Interface:
	- Edit. Menu for creating mesh.
		- Clear. Removes already created mesh.
		- Subdivide. Increases the number of vertices in mesh.
		- Hold Pivot. Saves an assigned rotation pivot of selected points.
		- Stretch. Moving selected vertices will move adjacent vertices. Influenced area adjusts with a slider.

	- Move. Menu for transforming created mesh. Useful for animation.
		- Reset. Returns the mesh to its original state created in the edit tab.
		- Hold Pivot. Saves an assigned rotation pivot of selected points.
		- Stretch. Moving selected vertices will move adjacent vertices. Influenced area adjusts with a slider.
		- Presets. Saves selected vertices as a preset to reselect them by clicking the 'sel' button. Presets can be used to animate multiple vertices at the same time. Presets are saved on disk so they can be used after engine reboot."
fit_content = true

[node name="Shortcuts" type="Panel" parent="Info/TabContainer"]
visible = false
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="Info/TabContainer/Shortcuts"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="shortcuts" type="RichTextLabel" parent="Info/TabContainer/Shortcuts/scroll"]
layout_mode = 2
size_flags_horizontal = 3
text = "MOVE and EDIT:
	Navigation:
		- Zoom : Wheel Up/Down (on empty space)
		- Pan : M Mouse (on empty space)
	Selecting :
		- Rect selection : R Mouse (drag)
		- Point selection /  : Shift + L Mouse
		- Deselect all : L Mouse (on empty space)
		- Crop selection : Shift + R Mouse (drag)
	Modifying:
		- Drag selected verticies : M Mouse (on selected)
		- Scale selected verticies : Ctrl + Wheel Up/Down
		- Rotate selected verticies : Ctrl + R Mouse (drag)
		- Set rotation pivot : Ctrl + L Mouse
EDIT:
	Deleting :
		- Delete selected verticies : Alt + R Mouse (on selected)
		- Delete selected verticies and fill space with polygons : Alt + L Mouse (on selected)
		- Point deleting (no fill)  : Alt + L/R Mouse (drag)"
fit_content = true

[node name="Tool" type="Node" parent="."]
script = ExtResource("8_s2esk")

[node name="Confirm" type="AcceptDialog" parent="."]
title = "Confirm"
script = ExtResource("11_cg08a")

[connection signal="tab_clicked" from="." to="." method="_on_tab_clicked"]
[connection signal="gui_input" from="Move" to="." method="_on_tab_gui_input"]
[connection signal="pressed" from="Move/buttons/reset" to="Move" method="_on_reset_pressed"]
[connection signal="pressed" from="Move/buttons/debug" to="Move" method="_on_debug__pressed"]
[connection signal="toggled" from="Move/buttons/hold_pivot" to="Move" method="_on_save_pivot_toggled"]
[connection signal="toggled" from="Move/buttons/brush" to="Move" method="_on_brush_toggled"]
[connection signal="toggled" from="Move/buttons/stretch" to="Move" method="_on_stretch_toggled"]
[connection signal="toggled" from="Move/settings/presets" to="Move" method="_on_presets_toggled"]
[connection signal="pressed" from="Move/settings/presets/cont/save_preset" to="Move" method="_on_save_preset_pressed"]
[connection signal="gui_input" from="Edit" to="." method="_on_tab_gui_input"]
[connection signal="pressed" from="Edit/buttons/clear" to="Edit" method="clear_poly"]
[connection signal="pressed" from="Edit/buttons/subdivide" to="Edit" method="subdivide"]
[connection signal="toggled" from="Edit/buttons/save_pivot" to="Edit" method="_on_save_pivot_toggled"]
[connection signal="gui_input" from="Info" to="." method="_on_tab_gui_input"]
